# esp32_iot

UDEMY_WIFI_ESP32/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
UDEMY_WIFI_ESP32/main/: CMakeLists.txt  adc.c  adc.h  app_nvs.c  app_nvs.h  fft.c  http_server.c  http_server.h  main.c  mqtt.c  mqtt.h  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h
UDEMY_WIFI_ESP32/main/certs/: certificate_pem_crt  private_pem_key
UDEMY_WIFI_ESP32/main/webpage/: .gitignore  app.css  app.js  index.html
